<resources>
    <string name="app_name">ProMigrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="languageselectionmessage">Start your adventure in Germany!</string>
    <string name="registrationinvitation">Don\'t have an account? Sign Up here !</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="register">Register</string>
    <string name="cypheader">Create your Profile</string>
    <string name="name">Username</string>
    <string name="age">Age</string>
    <string name="currentoccupation">Your current Occupation</string>
    <string name="addcontactinfo">Add Contact Information</string>
    <string name="datapolicy">Data Protection Policy</string>
    <string name="saveandgo">Save &amp; Go</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="invalid_password_error">Password must be at least 8 characters long</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="invalid_password_error_login">Password cannot be empty</string>
    <string name="password_criteria_error">Password must be at least 8 characters long and
        include a mix of upper and lower case letters, numbers, and special
        characters (@#$%^&amp;+=!).</string>
    <string name="confirm">Confirm</string>
    <string name="passwordpattern"><![CDATA[^(?=.*[0–9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=!])(?=\\S+$).{8,}$]]></string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="GoogleSignUp">GoogleSignup</string>
    <string name="default_web_client_id">33391475109-qrhsmk6lkmvb8jvemkq4jc8n2q1kgn9c.apps.googleusercontent.com</string>
    <string name="language_level_1">Language level: 1</string>
    <string name="desired_location_hint">desired location</string>
    <string name="beginner">A1: Beginner</string>
    <string name="basic_knowledge">A2: Basic knowledge</string>
    <string name="intermediate">B1: Intermediate usage</string>
    <string name="independent">B2: Independent usage</string>
    <string name="proficient">C1: Proficient skills</string>
    <string name="near_native">C2: Near native level</string>
    <string name="undefined">Language level: Undefined</string>
    <string name="hint_street">Complete address line</string>
    <string name="hint_birth_place">BirthPlace</string>
    <string name="hint_maiden_name">Maiden Name</string>
    <string name="selectoppfield">Select your occupational field</string>
    <string name="hint_first_name">"First Name"</string>
    <string name="hint_last_name">"Last Name "</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="additional_contact_info">Additional Contact Info</string>
    <string name="errornameempt">Name cannot be empty</string>
    <string name="errornageampth">Age cannot be empty</string>
    <string name="erroragepos">Age cannot be negative</string>
    <string name="erroragevalid">Age must be a valid number</string>
    <string name="errordataprotection">“Data protection must be accepted</string>
    <string name="errorprofilepic">A Profile picture must be selected</string>
    <string name="errorvoidaddress">Address cannot be empty</string>
    <string name="emptybirthplace">BirthPlace cannot be empty</string>
    <string name="emptymaidenname">Maiden Name cannot be empty</string>
    <string name="emptyfirstname">First Name cannot be empty</string>
    <string name="emptylastname">Last Name cannot be empty</string>
    <string name="emptyphonenumber">Phone Number cannot be empty</string>
    <string name="allentavalid">All entries are valid.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="emailinuse">This e-mail address is already in use.</string>
    <string name="unkownregistererror">Unknown registration error</string>
    <string name="resetpassword">Forgotten your password? Please click here to reset your password.</string>
    <string name="pleaseputemailin">Please enter your e-mail address.</string>
    <string name="resetpasswordsuccess">An e-mail has been sent to your e-mail address. Please follow the instructions in the e-mail to reset your password.</string>
    <string name="resetpasswordfail">An error occurred while trying to reset your password. Please check your e-mail address and try again.</string>
    <string name="jobsforyou">Professions\'s for YOU</string>
    <string name="saveandnext"><![CDATA[Save & Next]]></string>
    <string name="jobsopportunities">Job Opportunities</string>
    <string name="finish">Finish</string>
    <string name="dashboard">Dashboard</string>
    <string name="newdesiredjob">New Desired Job</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="jobapplication">To Do: Job Application</string>
    <string name="headertextonboarding">Please enter your new desired job and your new desired place of work here</string>
    <string name="joboffselect">Select new Job Offers</string>
    <string name="backtotodolist">Back to ToDo-List</string>
    <string name="onboardingrepeat">Repeat Onboarding</string>
    <string name="todojobresearch">Job Research</string>
    <string name="logout">LogOut</string>
    <string name="hellouser">Hi, %1$s!</string>
    <string name="unknownuser">Unknown User</string>
    <string name="exit">Exit</string>
    <string name="employer">Employer: %1$s</string>
    <string name="location">Location: %1$s</string>
    <string name="work_model">Work Model: %1$s</string>
    <string name="contract">Contract: %1$s</string>
    <string name="salary">Salary: %1$s</string>
    <string name="description">Description: %1$s</string>
    <string name="branch">Branch: %1$s</string>
    <string name="job">Job: %1$s</string>
    <string name="unlimited">Unlimited\n</string>
    <string name="limited">Limited</string>
    <string name="unknown">Unknown</string>
    <string name="edit_todo_hint">Edit your To Do Object</string>
    <string name="add_todo_hint">Add your new To Do Object</string>
    <string name="employeraddress">Employer Address: %1$s</string>
    <string name="emailnotexistserror">The email and password do not match</string>
    <string name="googlesignupfailed">Google Sign Up failed: %1$d</string>
    <string name="confirmdeletion">Do you want to delete this job offer?\n</string>
    <string name="delete">delete</string>
    <string name="editbutton">By pressing this , you can customize your todo item</string>
    <string name="languagecourse">Language courses for You</string>
    <string name="findlangcourse">Find a Language Course!</string>
    <string name="vocabularylearning">Vocabulary Learning</string>
    <string name="fronttext">Front text</string>
    <string name="backtext">Back text</string>
    <string name="addflashcard">Add your personalized Flashcard</string>
    <string name="editflashcard">Change the desired side of your Flashcard</string>
    <string name="begin">Start: %1$s</string>
    <string name="end">End: %1$s</string>
    <string name="relocandinte"><![CDATA[Relocation & Integration]]></string>
    <string name="findintecourse">Find a Integration Course !</string>
    <string name="integrationcourse">Integration Courses For You</string>
    <string name="faq">FAQ</string>
    <string name="givefeedback">Give me your feedback!</string>
    <string name="feedback">You can give your feedback here !</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="design">Design:</string>
    <string name="functionality">Functionality:</string>
    <string name="generalopinion">General opinion</string>
    <string name="feedbacksent">Your feedback has been sent successfully</string>
    <string name="question1">1.What does this app do?</string>
    <string name="answer1">1.The Project stemmed from a fervent desire to fill a gap in the current recruitment system.My role was comprehensive , initiating with the identification of this gap through market analysis and user research.</string>
    <string name="question2">2.How to create an account?</string>
    <string name="answer2">2.Creating an account in our app is a straightforward process. Here\'s how you can do it:\n\n1. Select Language: When you launch the app, you\'ll first be directed to the LanguageSelectionFragment where you can choose your preferred language.\n\n2. Login or Sign Up: Next, you\'ll be taken to the Login-Screen. If you already have an account that hasn\'t been set up yet, you can log in here. If you don\'t have an account, simply click on \"Don\'t have an Account? Click here to sign up!\" to proceed to the account creation process.\n\n3. Register: You\'ll then be directed to the Register-Screen. Here, you need to provide your email address, create a password, and confirm your password to ensure it\'s typed correctly.\n\n4. Create Your Profile: Once your account is set up, you\'ll be navigated to the CreateYourProfileFragment. This is where you can add personal details to complete your profile setup.\n\nBy following these steps, you\'ll have your account ready and set up in no time.</string>
    <string name="question3">3."How can I get in touch with Costumer Support ? "</string>
    <string name="answer3">3.Write an Email to : promigratecostumersupport@protonmail.com</string>
    <string name="question4">4.Is the use of the app free of charge?</string>
    <string name="answer4">4.Yes, the app itself is free to use. However, to access translations in languages other than German, you will need to obtain a DeepL API key. You can do this by creating a free account on DeepL. Once you have your API key, you will need to clone the corresponding public repository at https://github.com/SI-Classroom-Batch-012/batch12-abschlussprojekt-android-AlGSyntax. From there, you can build your own APK to utilize the app fully. This process enables you to enjoy the translation features in your preferred language at no extra cost.</string>
    <string name="question5">5..How can I reset my password?</string>
    <string name="answer5">5.If you need to reset your password, you can easily do so from the Login screen. There, you will find a clickable text that says: \'Forgotten your password? Please click here to reset your password.\' By clicking this link, you will be guided through the steps to securely reset your password.</string>
    <string name="question6">6.Does the app support multiple languages?</string>
    <string name="answer6">6.Yes, in addition to German and English, it also supports Spanish, Japanese, Ukrainian and Russian.</string>
    <string name="question7">7.Where can I provide feedback on the app?</string>
    <string name="answer7">7.Under the FAQ button that led you here, you will find a button that you can press to give feedback</string>
    <string name="adjustyourlanguagelevel">Adjust your language level here</string>
    <string name="delete_account_question">How can I delete my account?</string>
    <string name="delete_account">Delete account</string>
    <string name="account_deletion_failed">Account deletion failed</string>
    <string name="delete_account_confirmation">Please affirm your Account deletion</string>
    <string name="delete_account_header">It is sad that you are leaving us </string>
    <string name="account_deleted">Your account has been successfully deleted</string>
    <string name="funded">The course is sponsored.</string>
    <string name="not_funded">The course is not funded.</string>
    <string name="typeofdegree">Type of degree: %s</string>
    <string name="targetgroup">Target group: %s</string>
</resources>