<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/faqHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksandvariablefontwght"
        android:text="@string/faq"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="64dp"
        android:layout_height="49dp"
        android:layout_marginBottom="658dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/faqHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/faqHeader" />



    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/faqHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="6dp"
                android:text="@string/question1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="6dp"
                android:text="@string/question2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="6dp"
                android:text="@string/question3"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="6dp"
                android:text="@string/question4"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="6dp"
                android:text="@string/question5"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="6dp"
                android:text="@string/question6"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/question7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="6dp"
                android:text="@string/question7"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="42dp"
                android:text="@string/answer1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="42dp"
                android:text="@string/answer2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="42dp"
                android:text="@string/answer3"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="42dp"
                android:text="@string/answer4"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="42dp"
                android:text="@string/answer5"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="42dp"
                android:text="@string/answer6"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/answer7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandvariablefontwght"
                android:padding="42dp"
                android:text="@string/answer7"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/scrollToTopFromRightArrow"
        android:layout_width="75dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_circle_up_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>