<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateYourProfileFragment">

    <TextView
        android:id="@+id/tvCreateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cypheader"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/baseline_add_a_photo_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreateProfile" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePicture" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/age"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <EditText
        android:id="@+id/etWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/currentoccupation"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/etAge"
        app:layout_constraintStart_toStartOf="@id/etAge"
        app:layout_constraintTop_toBottomOf="@id/etAge" />

    <Button
        android:id="@+id/btnAddContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/addcontactinfo"
        app:layout_constraintEnd_toEndOf="@id/etWork"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/etWork"
        app:layout_constraintTop_toBottomOf="@id/etWork" />


    <com.google.android.material.slider.Slider
        android:id="@+id/languageLevelSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="1"
        android:valueTo="6"
        android:stepSize="1"
        app:labelBehavior="withinBounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

    <TextView
        android:id="@+id/languageLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprachniveau_1"
        app:layout_constraintTop_toBottomOf="@id/languageLevelSlider"
        app:layout_constraintStart_toStartOf="@id/languageLevelSlider"
        app:layout_constraintEnd_toEndOf="@id/languageLevelSlider"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginTop="16dp" />


    <CheckBox
        android:id="@+id/cbDataProtection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/datapolicy"
        app:layout_constraintEnd_toEndOf="@id/btnAddContact"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/btnAddContact"
        app:layout_constraintTop_toBottomOf="@id/btnAddContact" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/saveandgo"
        app:layout_constraintEnd_toEndOf="@id/cbDataProtection"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/cbDataProtection"
        app:layout_constraintTop_toBottomOf="@id/cbDataProtection" />

</androidx.constraintlayout.widget.ConstraintLayout>
