<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header TextView -->
    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="608dp"
        android:text="@string/signup"
        android:fontFamily="@font/quicksandvariablefontwght"
        android:textColor="@color/titles"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!-- E-Mail Eingabefeld mit TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTextView"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/quicksandvariablefontwght"
            android:textColor="@color/textcolor"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Passwort Eingabefeld mit TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:layout_constraintEnd_toEndOf="@id/emailTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/emailTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/quicksandvariablefontwght"
            android:textColor="@color/textcolor"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Passwortbestätigung Eingabefeld mit TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/passwordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmpassword"
            android:textColor="@color/textcolor"
            android:fontFamily="@font/quicksandvariablefontwght"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Registrierungsbutton -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:backgroundTint="@color/background"
        android:textColor="@color/textcolor"
        android:fontFamily="@font/quicksandvariablefontwght"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextInputLayout"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>



